--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Daschas Websitte</h1>
-    <p>Hallo Arletto!</p>
+    <h1>Hallo Arletto!</h1>
+    <p>Gruss an deine Grosseltern</p>
 </body>
 </html>
