--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hallo Arletto!</h1>
     <p>Gruss an deine Grosseltern</p>
+     <button type="button">Click me</button>
 </body>
 </html>
