--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Hallo Arletto!</h1>
     <p>Gruss an deine Grosseltern</p>
-     <button type="button">Click me</button>
+
+    <div class="info-box">
+        <p>Heutiges Datum:</p>
+        <strong id="current-date"></strong>
+        <p>Ein einfacher Text hier.</p>
+    </div>
 </body>
 </html>
