--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <h1>Hallo Arletto!</h1>
@@ -15,5 +15,7 @@
         <strong id="current-date"></strong>
         <p>Ein einfacher Text hier.</p>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
