--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <p>Gruss an deine Grosseltern</p>
 
     <div class="info-box">
-        <p>Heutiges Datum:</p>
-        <strong id="current-date"></strong>
+        <!--<p>Heutiges Datum:</p>**/
+        <strong id="current-date"></strong>-->
+        <p>10.12.2023</p>
         <p>Ein einfacher Text hier.</p>
     </div>
 
