--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!--<p>Heutiges Datum:</p>**/
         <strong id="current-date"></strong>-->
         <p>10.12.2023</p>
-        <p>Ein einfacher Text hier.</p>
+        <p>Hast du schonmal bemerkt, dass man aus dem Namen Arletto das Wort "Otter" bilden kann?</p>
     </div>
 
     <script src="script.js"></script>
